# servier_data_pipeline

./: .gitignore  README.md  pyproject.toml  reponses.sql  requirements.txt
output/: drug_mentions.json
src/ad_hoc/: journal_analyzer.py
src/pipeline/: config.py  graph_builder.py  loader.py  main.py  parser.py
tests/: test_graph_builder.py
